upto about me completed

--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
-<!--
-	Author: W3layouts
-	Author URL: http://w3layouts.com
-	License: Creative Commons Attribution 3.0 Unported
-	License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE html>
 <html lang="en">
+<!--
+	Author: Raj Shah
+	Author URL: https://rpshah.github.io
+-->
 <!-- Head -->
 <head>
-<title>My Data a Personal Category Bootstrap Responsive Website Template | Home :: w3layouts</title>
+<title>Raj Shah | Learner-Coder-Developer</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8">
-<meta name="keywords" content="My Data a Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+<meta name="keywords" content="web developer, full stack engineer, freelancer,ahmedabad,india,internet of things" />
+<meta name="description" content="Raj Shah is a young guy from India with Information and Technology background, who loves web developement, mobile developement, software engineering and Inernet of Things.">
 <!-- Default-JavaScript-File -->
 
 	<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
@@ -48,23 +46,23 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">My Data</a>
+            <a class="navbar-brand" href="index.html">RPSHAH</a>
         </div>
 		<!-- Collect the nav links, forms, and other content for toggling -->
         <div class="navbar-collapse collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav navbar-right cl-effect-15">
 				<li class="hidden"><a class="page-scroll" href="#page-top"></a>	</li>
                 <li><a class="page-scroll scroll" href="#home">Home</a></li>
-                <li><a class="page-scroll scroll" href="#about">About</a></li>
-                <li><a class="page-scroll scroll" href="#services">Services</a></li>
-                <li><a class="page-scroll scroll" href="#portfolio">Portfolio</a></li>
-				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                <li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About<span class="caret"></span></a>
 					<ul class="dropdown-menu">
+						<li><a class="page-scroll scroll" href="#about">About Me</a></li>
 						<li><a class="page-scroll scroll" href="#education">Education</a></li>
 						<li><a class="page-scroll scroll" href="#workexperience">WorkExperience</a></li>
 					</ul>
 				</li>
+                <li><a class="page-scroll scroll" href="#services">Services</a></li>
+                <li><a class="page-scroll scroll" href="#portfolio">Portfolio</a></li>
 				<li><a class="page-scroll scroll" href="#skills">skills</a></li>
 				<li><a class="page-scroll scroll" href="#contact">Contact</a></li>
             </ul>
@@ -81,9 +79,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 		<div class="col-md-7 banner-right">
 			<h1>Hi, My name is </h1>
-			<span>henry rich</span>
-			<h2>A man with 4yrs code experience</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales, Phasellus sodales, nibh ac nibh ac lacinia euismod, nibh eros nulla feugiat elit, id vestibulum ligula tellus a augue. Lorem Ipsum dolar consectetur adipiscing elit. Phasellus sodales.</p>
+			<span>Raj Shah</span>
+			<h2>A man who Learns, Codes, Makes.</h2>
+			<p>A young guy from India who loves coding, eager to learn new things everyday, can try C,C++,PHP,python,Java,ASP.NET,C#,JavaScript,typescript and many more languages. I am from IT background who loves Internet of Things,Software Enginnering and Datbase Designs.</p>
 		</div>
 		<div class="thim-click-to-bottom">
 			<a href="#about" class="scroll">
@@ -99,38 +97,25 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="container">
 		<div class="about-head text-center ">
 			<h3>About me</h3>
-			<div class="about-grids-top">
-				<div class="col-md-3 about-grid">
-					<i class="fa fa-laptop" aria-hidden="true"></i>
-					<h4>Web design</h4>
-				</div>
-				<div class="col-md-3 about-grid">
-					<i class="fa fa-mobile" aria-hidden="true"></i>
-					<h4>App development</h4>
-				</div>
-				<div class="col-md-3 about-grid">
-					<i class="fa fa-user" aria-hidden="true"></i>
-					<h4>Team leader</h4>
-				</div>
-				<div class="col-md-3 about-grid">
-					<i class="fa fa-th" aria-hidden="true"></i>
-					<h4>Creative design</h4>
-				</div>
-				<div class="col-md-3 about-grid">
-					<i class="fa fa-file-text" aria-hidden="true"></i>
-					<h4>UI Projects</h4>
-				</div>
-				<div class="clearfix"></div>
-			</div>
+			<br>
+			<div class="clearfix"></div>
 			<div class="about-grids-bottom">
-				<div class="col-md-4 about-bottom-grid">
-					<h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam commodo urna dolor,</h4>
+				<div class="col-md-2 about-bottom-grid">
+					<h4>
+						Hi,<br>
+						Something <br>
+						About Me
+					</h4>
 				</div>
 				<div class="col-md-4 about-bottom-grid">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam commodo urna dolor, eget lacinia est aliquam id. Proin velit libero, vestibulum ac orci eu, faucibus consectetur dolor. Cras ullamcorper elit eros, nec bibendum lacus accumsan eu. Donec non </p>
+					<p>
+						I am final year student of Computer Engineering(BE) of L.D. College of Engineering,GTU living in Ahmedabad,Gujarat. I have worked for FOSS club-LDCE, Placement Cell-LDCE, GTU Techfest, LAB55 and Arcobotics as volunteer, manager, coder, developer and IoT engineer.
+					</p>
 				</div>
-				<div class="col-md-4 about-bottom-grid">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam commodo urna dolor, eget lacinia est aliquam id. Proin velit libero, vestibulum ac orci eu, faucibus consectetur dolor. Cras ullamcorper elit eros, nec bibendum lacus accumsan eu. Donec non </p>
+				<div class="col-md-6 about-bottom-grid">
+					<p>
+						I can try in any of C,C++,PHP,python,Java,ASP.NET,C#,JS,ts languages as I have experienced many frameworks of these languages also. I have knowledge in databse sesign, software engineering, data structures, algorithms and IoT technologies.I have done certification courses in C,C++ and Java. I loved to play with IoT boards like Arduino,Raspberry Pi, NodeMCU, Intel Gelelio,Genuino 101 and still counting. 
+					</p>
 				</div>
 					<div class="clearfix"></div>
 			</div>
@@ -155,42 +140,43 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<img src="images/banner5.png" class="img-responsive" alt=""/><div class="social-icons">
 						<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
 						<a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+						<a href="#"><i class="fa fa-github" aria-hidden="true"></i></a>
 						<a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-						<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
 					</div>
 						</div>
 						<div class="col-md-8 col-sm-8 col-xs-8 about-right wthree">
-							<h3>Hi, i'm <span>Henry Rich </span></h3>
-							<h4>Web Designer & Developer </h4>
+							<h3>Hi, i'm <span>Raj Shah</span></h3>
+							<h4>Learner, Coder, Maker </h4>
 							<ul class="address">
 								<li>
 									<ul class="agileits-address-text ">
 										<li><b>D.O.B</b></li>
-										<li>21-08-1987</li>
+										<li>25-07-1996</li>
 									</ul>
 								</li>
 								<li>
 									<ul class="agileits-address-text">
 										<li><b>PHONE </b></li>
-										<li>+00 234 111 6633</li>
+										<li>+91-8690327356</li>
 									</ul>
 								</li>
 								<li>
 									<ul class="agileits-address-text">
 										<li><b>ADDRESS </b></li>
-										<li>110 Atatürk Blvd, Kavaklıdere, 06100, Turkey.</li>
+										<li>A5, Manila Flats, Naranpura, Ahmedabad.</li>
 									</ul>
 								</li>
 								<li>
 									<ul class="agileits-address-text">
 										<li><b>E-MAIL </b></li>
-										<li><a href="mailto:example@mail.com"> info@example.com</a></li>
+										<li><a href="mailto:example@mail.com"> rpshah
+										_96@yahoo.com</a></li>
 									</ul>
 								</li>
 								<li>
 									<ul class="agileits-address-text">
 										<li><b>WEBSITE </b></li>
-										<li><a href="#">www.mydata.com</a></li>
+										<li><a href="#">rpshah.github.io</a></li>
 									</ul>
 								</li>
 							</ul> 
@@ -907,22 +893,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 		</div>
 									<div class="w3agile_map">
-										<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6361699.744011737!2d30.7513355529986!3d38.87140724832268!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14b0155c964f2671%3A0x40d9dbd42a625f2a!2sTurkey!5e0!3m2!1sen!2sin!4v1490159234025"></iframe>		
+										<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1835.565449099771!2d72.56188935000003!3d23.055662149999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1491150953148" frameborder="0" style="border:0" allowfullscreen></iframe>		
 								<div class="agileinfo_map_color">
 											<div class="agileinfo_map_color_grid">
 												<div class="col-md-4 agileinfo_map_color_grid_left">
 													<h4><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>Address</h4>
-													<p>110 Atatürk Blvd, Kavaklıdere, 06100 Ankara - Turkey.</p>
+													<p>A5, Manila Flats,Naranpura,Ahmedabad</p>
 												</div>
 												<div class="col-md-4 agileinfo_map_color_grid_left">
 													<h4><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>Mail Me</h4>
-													<p><a href="mailto:example@mail.com"> mail@example.com</a></p>
-													<p><a href="mailto:example@mail.com"> mail@example1.com</a></p>
+													<p><a href="mailto:rpshah_96@yahoo.com"> rpshah_96@yahoo.com</a></p>
 												</div>
 												<div class="col-md-4 agileinfo_map_color_grid_left">
 													<h4><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>Phone</h4>
-													<p>(0-312) 455 55 5555</p>
-													<p>(0-312) 467 00 0019</p>
+													<p>+91-8690327356</p>
 												</div>
 												<div class="clearfix"> </div>
 											</div>
@@ -945,7 +929,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</ul>
 					</div>
 
-	<p class="copy-right">© 2017 My data. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+	<p class="copy-right">© 2017 RPSHAH. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
 </div>
 <!-- copyright -->
 
